[gd_scene load_steps=2 format=3 uid="uid://8olbtien2c8w"]

[ext_resource type="Script" path="res://Scenes/Other/PauseMenu/PauseMenu.gd" id="1_rd3wy"]

[node name="PauseMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("1_rd3wy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PartyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Party"

[node name="SkillsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Skills"

[node name="EquipmentButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Equipment"

[node name="ItemsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Items"

[node name="OptionsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 10
text = "Back"

[node name="MenuContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="VBoxContainer/MenuContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 10
text = "Exit Game"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PartyButton" to="." method="_on_party_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ItemsButton" to="." method="_on_items_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
